feat: first version layout, and cms plugin

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,8 +1,7 @@
-@font-face {
-	font-family: 'Source Sans';
-	src: url('./Fonts/sourcesanspro-regular-webfont.woff2') format('woff2'),
-		url('./Fonts/sourcesanspro-regular-webfont.woff') format('woff'),
-		url('./Fonts/sourcesanspro-regular-webfont.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
+@font-face{
+	font-family:'Helvetica Neue';
+	src: url('../fonts/3a46542f-f429-4821-9a88-62e3be54a640.woff2') format('woff2'),
+	url('../fonts/50ac1699-f3d2-47b6-878f-67a368a17c41.woff') format('woff'),
+	url('../fonts/0be5590f-8353-4ef3-ada1-43ac380859f8.ttf') format('truetype'),
+	url('../fonts/1b950d2a-907a-4888-8056-0d44e8e86338.eot?#iefix') format('eot');
 }
