--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,8 +1,8 @@
 $primary-color: #000!default;
 $secondary-color: #fff!default;
 
-$container: 1170px!default;
-$textContainer: 945px!default;
+$container: 1440px!default;
+$textContainer: 495px!default;
 
-$fontFamily: sans-serif!default;
+$fontFamily: "Helvetica Neue", sans-serif!default;
 $text-color: $primary-color!default;
