--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -14,6 +14,7 @@ body {
 	background-color: $secondary-color;
 	color: $text-color;
 	font: normal normal 1em/1.5 $fontFamily;
+	width: 100%;
 }
 
 *,
