feat: remove slider from container

--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -4,8 +4,10 @@
 	&:last-child { margin-bottom: 0 }
 
 	&-slider {
-		&__wrapper { margin-right: 20px; }
+		&__wrapper {
+			@media screen and (max-width: 768px) { margin-right: 5px; }
+			margin-right: 10px;
+		}
 
-		@media screen and (max-width: 768px) { margin: 0 -5% 0 -5% }
 	}
 }
