--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -33,14 +33,12 @@ a {
 
 
 .container {
-	max-width: $container;
+	// max-width: $container;
+	// @media screen and (max-width: 767px) { width: 90% }
 	width: 90%;
 	margin: 0 auto;
 	padding: 30px 0;
 
-	// @media screen and (max-width: 767px) {
-	// 	padding: 30px 0;
-	// }
 }
 
 .text-container {
